syntax = "proto3";

package ru.otus.protobuf;

option java_multiple_files = true;

message SequenceParams {
    int32 from = 1;
    int32 to = 2;
}

message SequenceMember {
    int32 member = 1;
}

service RemoteSequenceService {
    rpc getSequenceAsync(SequenceParams) returns (stream SequenceMember);
}
